Update theme color and modify install button display

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 <title>SweatItOut</title>
 <link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#0a0a0a">
+<meta name="theme-color" content="#ff4500">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="SweatItOut">
+<link rel="apple-touch-icon" href="icon-192.png">
+<meta name="mobile-web-app-capable" content="yes">
 <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700;800&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 <style>
@@ -221,7 +226,7 @@ h1,h2,h3,h4{font-family:'Syne',sans-serif}
 .empty-state{text-align:center;padding:36px 16px;color:var(--muted)}
 .empty-icon{font-size:2.8rem;margin-bottom:10px}
 .ca{color:var(--accent)}.cg{color:var(--green)}.cp{color:#ff6b9d}.cy{color:#ffd740}.ct{color:#69f0ae}
-#install-btn{display:flex}
+#install-btn{display:none}
 </style>
 </head>
 <body>
